<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="ie.app.uetstudents.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_notifications"
        android:name="ie.app.uetstudents.ui.thongbao.NotificationsFragment"
        android:label="@string/menu_thongbao"
        tools:layout="@layout/fragment_notifications" />
    <fragment
        android:id="@+id/nav_document"
        android:name="ie.app.uetstudents.ui.tailieu.DocumentFragment"
        android:label="@string/menu_tailieu"
        tools:layout="@layout/fragment_documents" />
    <fragment
        android:id="@+id/nav_exam"
        android:name="ie.app.uetstudents.ui.dethi.ExamFragment"
        android:label="@string/menu_dethi"
        tools:layout="@layout/fragment_exam" />
    <fragment
        android:id="@+id/nav_news"
        android:name="ie.app.uetstudents.ui.bantin.NewsFragment"
        android:label="@string/menu_bantin"
        tools:layout="@layout/fragment_news">

    </fragment>

    <fragment
        android:id="@+id/nav_forum"
        android:name="ie.app.uetstudents.ui.diendan.ForumFragment"
        android:label="@string/menu_diendan"
        tools:layout="@layout/fragment_forum" >
        <action android:id="@+id/forumFragment_to_writeFragment"
            app:destination="@id/write_fragment"/>
    </fragment>

    <fragment
        android:id="@+id/nav_uettalk"
        android:name="ie.app.uetstudents.ui.uettalk.UETTalkFragment"
        android:label="@string/menu_uettalk"
        tools:layout="@layout/fragment_uettalk" />
    <fragment android:id="@+id/write_fragment"
        android:name="ie.app.uetstudents.ui.diendan.WriteFragment"
        android:label="Đăng Bài"
        tools:layout="@layout/fragment_write">
        <action android:id="@+id/writeFragment_to_forumFragment"
            app:destination="@id/nav_forum"/>
    </fragment>

    <fragment android:id="@+id/nav_login"
        android:name="ie.app.uetstudents.ui.login.LoginFragment"
        android:label="Đăng Nhập"
        tools:layout="@layout/fragment_login">
        <action android:id="@+id/loginFragment_to_HomeFragment"
            app:destination="@id/nav_home"/>
        <action android:id="@+id/loginFragment_to_logoutfragment"
            app:destination="@id/nav_logout"/>
    </fragment>
    <fragment android:id="@+id/nav_logout"
        android:name="ie.app.uetstudents.ui.login.LogoutFragment"
        android:label="Đăng Ký"
        tools:layout="@layout/fragment_logout">
        <action android:id="@+id/logoutfragment_to_loginFragment"
            app:destination="@+id/nav_login"/>
    </fragment>
</navigation>